# Give_me_some_credit

./: README.md  dvc.yaml  pyproject.toml
.dvc/: config
airflow/dags/: train_optimal_models.py
data/: Data Dictionary.xls  cs-test.csv.dvc  sampleEntry.csv.dvc
data/hypothesis_testing_about_target/: .gitignore  data_0_0.csv.dvc  data_0_1.csv.dvc  data_1_0.csv.dvc  data_1_1.csv.dvc
data/interim/: .gitignore
data/raw/: .gitignore
notebooks/: 01_eda_data.ipynb  02_feature_engineering.ipynb  03_train_models.ipynb
reports/modeling/: .gitignore  best_model_results.md  model_selection_results.csv  model_selection_results.json
src/credit_risk_scoring/: cli.py
src/credit_risk_scoring/modeling/: __init__.py  commands.py  train_models.py
src/credit_risk_scoring/preprocessing/: commands.py  common_prepare_data.py  common_prepare_train_data.py  feature_engineering.py
