[project]
name = "give-me-some-credit"
version = "0.1.0"
description = ""
authors = [
    {name = "Drema"}
]
requires-python = ">=3.12"
dependencies = [
    "dvc (>=3.67.1,<4.0.0)",
    "dvc-gdrive (>=3.0.1,<4.0.0)",
    "pyopenssl (==24.2.1)",
    "cryptography (<44)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "click (>=8.4.0,<9.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "catboost (>=1.2.10,<2.0.0)",
    "xgboost (>=3.3.0,<4.0.0)"
]


[project.scripts]
credit-risk = "credit_risk_scoring.cli:cli"

[tool.poetry]
packages = [{ include = "credit_risk_scoring", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
